--- a/release/1.4/release-1.4.org
+++ b/release/1.4/release-1.4.org
@@ -68,7 +68,7 @@
   + [X] Haddocks up to date
   + [ ] version bump
   + [X] LICENSE updated
-*** TODO SVGFonts
+*** DONE SVGFonts
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
@@ -78,7 +78,7 @@
   + [X] Haddocks up to date
   + [X] version bump
   + [X] LICENSE updated
-  + [ ] Can upload already, nothing depends on it
+  + [X] Can upload already, nothing depends on it
 *** DONE palette
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
@@ -112,46 +112,53 @@
   + [ ] Haddocks up to date
   + [ ] version bump
   + [X] LICENSE updated
-*** TODO statestack
+*** DONE statestack
   + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
   + [ ] version bump
   + [ ] LICENSE updated
+
+  Didn't need update at all.
 *** TODO diagrams-cairo
   + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] LICENSE updated
+
+  No changes, just updated contributor list.  Can just re-release
+  1.3.1 as 1.4.
+
 *** TODO diagrams-gtk
   + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
   + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
-*** TODO diagrams-postscript
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
+    - strangely only 7.8 build fails (though 7.6 succeeds!)
+    - ...but only on certain runs?
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] LICENSE updated
+
+  Can upload master as 1.4.
+*** DONE diagrams-postscript
+  + [X] CHANGES updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] LICENSE updated
 *** TODO cchalmers/texrunner
   + [ ] CHANGES updated
   + [ ] all CHANGES in user manual or tutorial
@@ -163,25 +170,26 @@
   + [ ] version bump
   + [ ] LICENSE updated
 *** TODO diagrams-pgf
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] CHANGES updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
   + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
+  + [X] update tested-with field
+  + [X] Haddocks up to date
   + [ ] version bump
-  + [ ] LICENSE updated
+  + [X] LICENSE updated
 *** TODO diagrams-rasterific
-  + [ ] CHANGES updated
+  + [X] CHANGES updated
   + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
   + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
+    - 7.8 build failed with weird error, maybe transient.  Rebuilding.
+  + [X] update tested-with field
+  + [X] Haddocks up to date
   + [ ] version bump
-  + [ ] LICENSE updated
+  + [X] LICENSE updated
 *** TODO jeffreyrosenbluth/svg-builder
   + [ ] CHANGES updated
   + [ ] all CHANGES in user manual or tutorial
