--- a/release/1.4/release-1.4.org
+++ b/release/1.4/release-1.4.org
@@ -237,37 +237,28 @@
   + [ ] Haddocks up to date
   + [ ] version bump
   + [ ] LICENSE updated
-*** TODO diagrams-builder
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
+*** DONE diagrams-builder
+  + [X] CHANGES updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
+  + [X] travis build green
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] version bump
+  + [X] LICENSE updated
 *** TODO diagrams-haddock
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] CHANGES updated
+  + [X] all CHANGES in user manual or tutorial
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
   + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
-
-*** TODO diagrams-backend-tests
-  + [ ] CHANGES updated
-  + [ ] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
-  + [ ] travis build green
-  + [ ] update tested-with field
-  + [ ] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
+  + [X] update tested-with field
+  + [X] Haddocks up to date
+  + [X] version bump
+  + [X] LICENSE updated
+*** DONE diagrams-backend-tests
+    + [X] building
 *** TODO docutils
   + [ ] CHANGES updated
   + [ ] all CHANGES in user manual or tutorial
@@ -290,14 +281,14 @@
   + [ ] Haddocks up to date
   + [ ] version bump
   + [ ] LICENSE updated
-** TODO user manual / tutorials [0/3]
+** TODO user manual / tutorials [2/3]
 + [ ] make sure all examples build
-+ [ ] make sure documentation is up-to-date
-+ [ ] make sure all new features are described/mentioned in the manual
-** TODO testing [0/7]
++ [X] make sure documentation is up-to-date
++ [X] make sure all new features are described/mentioned in the manual
+** TODO testing [2/3]
 + [ ] check all travis tests
-+ [ ] run diagrams-backend-tests
-+ [ ] copy diagrams-backend-tests output to website
++ [X] run diagrams-backend-tests
++ [X] copy diagrams-backend-tests output to website
 ** TODO update release page on website
       - See previous versions for format.  Should be possible to
         essentially paste in the relevant parts of the CHANGES files
