--- a/release/1.4/release-1.4.org
+++ b/release/1.4/release-1.4.org
@@ -1,4 +1,4 @@
-* Checklist for major releases [1/8]
+* Checklist for major releases [0/8]
 ** TODO go through per-package checklist
 *** DONE monoid-extras
   + [X] CHANGES updated
@@ -266,10 +266,11 @@
   + [ ] Haddocks up to date
   + [ ] version bump
   + [ ] LICENSE updated
-** DONE user manual / tutorials [3/3]
+** TODO user manual / tutorials [3/4]
 + [X] make sure all examples build
 + [X] make sure documentation is up-to-date
 + [X] make sure all new features are described/mentioned in the manual
++ [ ] create migration guide
 ** TODO testing [2/3]
 + [ ] check all travis tests
 + [X] run diagrams-backend-tests
