--- a/release/1.4/release-1.4.org
+++ b/release/1.4/release-1.4.org
@@ -1,4 +1,4 @@
-* Checklist for major releases [5/8]
+* Checklist for major releases [6/8]
 ** DONE go through per-package checklist
 *** DONE monoid-extras
   + [X] CHANGES updated
@@ -32,7 +32,7 @@
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [ ] version bump
+  + [X] version bump
   + [X] LICENSE updated
 *** DONE active
   + [X] CHANGES updated
@@ -62,11 +62,11 @@
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] lower bounds fixed
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [ ] version bump
+  + [X] version bump
   + [X] LICENSE updated
 *** DONE SVGFonts
   + [X] CHANGES updated
@@ -91,14 +91,12 @@
   + [X] LICENSE updated
   + [X] UPLOADED
 *** DONE force-layout
-  + [ ] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
   + [X] lower bounds fixed
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [ ] version bump
   + [X] LICENSE updated
 
   No upload needed!
@@ -110,22 +108,19 @@
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [ ] version bump
+  + [X] version bump
   + [X] LICENSE updated
 *** DONE statestack
-  + [ ] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
   + [X] lower bounds fixed
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [ ] version bump
-  + [ ] LICENSE updated
 
   Didn't need update at all.
 *** DONE diagrams-cairo
-  + [ ] CHANGES updated
+  + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
   + [X] lower bounds fixed
@@ -138,7 +133,7 @@
   1.3.1 as 1.4.
 
 *** DONE diagrams-gtk
-  + [ ] CHANGES updated
+  + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
   + [X] lower bounds fixed
@@ -152,7 +147,7 @@
 
   Can upload master as 1.4.
 *** DONE diagrams-postscript
-  + [ ] CHANGES updated
+  + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
   + [X] lower bounds fixed
@@ -172,7 +167,7 @@
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [ ] version bump
+  + [X] version bump
   + [X] LICENSE updated
 *** DONE diagrams-rasterific
   + [X] CHANGES updated
@@ -184,7 +179,7 @@
       Rebuilding. OK.
   + [X] update tested-with field
   + [X] Haddocks up to date
-  + [ ] version bump
+  + [X] version bump
   + [X] LICENSE updated
 *** DONE jeffreyrosenbluth/svg-builder
     Nothing needed.
@@ -192,14 +187,14 @@
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] lower bounds fixed
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
   + [X] version bump
   + [X] LICENSE updated
 
-  + [ ] Need to bump bounds for other diagrams packages, then upload
+  + [X] Need to bump bounds for other diagrams packages, then upload
     1.4.1
 *** DONE jeffreyrosenbluth/static-canvas
     Nothing needed.
@@ -207,29 +202,32 @@
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] lower bounds fixed
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
   + [X] version bump
   + [X] LICENSE updated
 
-  + [ ] Looks good, just need to bump bounds on other diagrams packages,
-    tag, and upload 1.4.
+  + [X] Looks good, just need to bump bounds on other diagrams packages,
+  + [ ] tag, and upload 1.4.
 *** DONE diagrams-html5
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
   + [X] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] lower bounds fixed
   + [X] travis build green
   + [X] update tested-with field
   + [X] Haddocks up to date
   + [X] version bump
   + [X] LICENSE updated
 
-  + [ ] Just need to bump bounds, tag, upload 1.4
+  + [X] Just need to bump bounds
+  + [ ] tag, upload 1.4
 *** DONE diagrams-pandoc
-    + [ ] just need to bump bounds for other diagrams packages etc.
+    + [X] just need to bump bounds for other diagrams packages etc.
+    + [ ] and release minor version bump?
+    + [ ] COULDN'T UPLOAD!, I am not in uploaders group
 *** DONE diagrams-builder
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
@@ -261,8 +259,8 @@
 *** DONE diagrams
   + [X] CHANGES updated
   + [X] all CHANGES in user manual or tutorial
-  + [ ] upper bounds fixed
-  + [ ] lower bounds fixed
+  + [X] upper bounds fixed
+  + [X] lower bounds fixed
   + [X] update tested-with field
   + [X] Haddocks up to date
   + [X] version bump
@@ -285,18 +283,20 @@
 ** DONE diagrams-haddock [2/2]
 + [X] make sure all diagrams-haddock examples build
 + [X] rebuild all diagrams-haddock examples and check them in
-** TODO upload packages [0/4]
-+ [ ] List release date in each CHANGES file
-+ [ ] Apply a tag to each repo just before releasing
+** DONE upload packages [6/6]
++ [X] bump all version numbers as needed
++ [X] update upper/lower bounds for version bumps as needed
++ [X] List release date in each CHANGES file
++ [X] Apply a tag to each repo just before releasing
   - The tag should have a name like "vX.X.X", with a v prefixed
     to the version
   - The tag message should mention the version and give a very
     short comment describing the release
   - Use a command like: git tag -a v1.3 -m "1.3 release (update for frozz-wizz)"
-+ [ ] If necessary, rename old 'release' branch to 'release-X.Y' and
++ [X] If necessary, rename old 'release' branch to 'release-X.Y' and
   change 'release' branch to point to appropriate commit (requires a
   force-push)
-+ [ ] Upload
++ [X] Upload
 ** TODO regenerate combined Haddock documentation and commit to website.
       NOTE: this must be done AFTER releasing packages to Hackage!
       There is a script, build-haddocks.sh, in the diagrams-doc root
