add -graphviz and -input to the list [ci skip]

--- a/release/checklist.org
+++ b/release/checklist.org
@@ -103,6 +103,8 @@
   - diagrams
   - diagrams-builder
   - diagrams-haddock
+  - diagrams-graphviz
+  - diagrams-input
 
   Other packages that should be checked:
 
