update HCAR entry

--- a/HCAR/diagrams-Bd.tex
+++ b/HCAR/diagrams-Bd.tex
@@ -1,6 +1,6 @@
 % diagrams-Bd.tex
 \begin{hcarentry}[updated]{diagrams}
-\report{Brent Yorgey}%11/15
+\report{Brent Yorgey}%11/16
 \status{active development}
 \participants{many}
 \makeheader
@@ -26,23 +26,17 @@ monoidal annotations, named subdiagrams, and more.
 
 \subsubsection*{What's new}
 
-Diagrams development has currently stalled a bit, as most of the major
-contributors are busy with other things.  However, this summer should
-bring a 1.4 release with some new features:
+Diagrams 1.4 was released at the end of October, and mostly just adds
+new features, such as:
 
 \begin{compactitem}
 \item B-spline support, and B-spline to cubic Bezier conversion
-\item Path union and intersection
+\item Boolean operations on paths, such as union and intersection
 \item CSG support for 3D diagrams
 \item New techniques and tools for drawing 2D projections of 3D
   diagrams, illustrated above
 \item Constraint-based layout
 \end{compactitem}
-
-We are also continuing work on using \texttt{stack} to create a system
-for easier, more reproducible builds, which will benefit both users
-and developers, and form the basis for much more comprehensive
-continuous integration testing.
 
 %**<img width=350 src="./kaleidoscope.jpg">
 %*ignore
